
syntax = "proto3";

package riot;

option go_package = "/riot";

import "google/protobuf/empty.proto";

service RiotAPIService {
    rpc GetSummonerByName(SummonerByNameRequest) returns (SummonerResponse) {}
    rpc GetChampionMasteriesBySummoner(ChampionMasteriesRequest) returns (ChampionMasteriesResponse) {}
    rpc GetLeagueEntriesBySummoner(LeagueEntriesRequest) returns (LeagueEntriesResponse) {}
    rpc UpdateSummonerByName(SummonerByNameRequest) returns (SummonerResponse) {}
    rpc UpdateChampionMasteriesBySummoner(ChampionMasteriesRequest) returns (ChampionMasteriesResponse) {}
    rpc UpdateLeagueEntriesBySummoner(LeagueEntriesRequest) returns (LeagueEntriesResponse) {}
    rpc GetChampionBySummonerAndLane(ChampionBySummonerAndLaneRequest) returns (ChampionBySummonerAndLaneResponse) {}
    rpc GetChampionsByTeams(GetChampionsByTeamsRequest) returns (GetChampionsByTeamsResponse) {}
    rpc GetTeams(GetTeamsRequest) returns (GetTeamsResponse) {} 
    rpc SeedDB(google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc GetGameData(GetGameDataRequest) returns (getGameDataResponse) {}
}

message ChampionBySummonerAndLaneRequest {
    string summonerId = 1;
    string lane = 2;
}

message ChampionBySummonerAndLaneResponse {
    string champion = 1;
}

message SummonerByNameRequest {
    string name = 1;
    string tag = 2; 
}

message SummonerResponse {
    string id = 1;
    string accountId = 2;
    string puuid = 3;
    string name = 4;
    string tag = 5; 
    int32 summonerLevel = 6;
}

message ChampionMasteriesRequest {
    string summonerId = 1;
}

message ChampionMasteriesResponse {
    repeated ChampionMastery masteries = 1;
}

message ChampionMastery {
    string puuid = 1;
    int64 championId = 2;
    int32 championLevel = 3;
    int32 championPoints = 4;
    int64 lastPlayTime = 5;
    int32 championPointsSinceLastLevel = 6;
    int32 championPointsUntilNextLevel = 7;
    int32 tokensEarned = 8;
    bool chestGranted = 9;
}

message LeagueEntriesRequest {
    string summonerId = 1;
}

message LeagueEntriesResponse {
    repeated LeagueEntry entries = 1;
}

message LeagueEntry {
    string leagueId = 1;
    string queueType = 2;
    string tier = 3;
    string rank = 4;
    int32 leaguePoints = 5;
    int32 wins = 6;
    int32 losses = 7;
    bool veteran = 8;
    bool inactive = 9;
    bool freshBlood = 10;
    bool hotStreak = 11;
}

message SummonerLane {
    string summonerName = 1;
    string lane = 2;
}

message SummonerChampion {
    string summonerName = 1;
    string lane = 2;
    string championName = 3;
    int32 championPoints = 4;
}

message GetChampionsByTeamsRequest {
    repeated SummonerLane team1 = 1;
    repeated SummonerLane team2 = 2;
}

message GetChampionsByTeamsResponse {
    repeated SummonerChampion team1Champions = 1;
    repeated SummonerChampion team2Champions = 2;
}

message GetTeamsRequest {
    repeated string summoners = 1;
}

message GetTeamsResponse {
    repeated string team1 = 1;
    repeated string team2 = 2;
}

message ChampionSummoner {
    string summonerName = 1;
    string championName = 2;
}

message TeamDataRequest {
  repeated ChampionSummoner summoners = 1;
}

message TeamDataResponse {
  int32 Rating = 1;
  int32 MasteryScore = 2;
  }

message GetGameDataRequest {
    TeamDataRequest team1 = 1;
    TeamDataRequest team2 = 2;
}

message getGameDataResponse {
    TeamDataResponse team1 = 1;
    TeamDataResponse team2 = 2;
}

